objects/Contact.object
<CustomObject><fields>
        <fullName>Anonymous_Ref__c</fullName>
        <description>Populated by workflow on first Student Module against this record</description>
        <label>Anonymous Ref</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Audit_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated by Visual Workflow</description>
        <label>Audit Log</label>
        <referenceTo>SIS_Audit__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Student</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CRM_Temp_Field__c</fullName>
        <description>Used to isolate records for testing, debug and (in time) campaigns</description>
        <label>CRM Temp Field</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ContactId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactId</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Country_of_Birth__c</fullName>
        <label>Country of Birth</label>
        <picklist>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Barthélemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean Netherlands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>DPGR_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grants access to all checked, offered and registered Student Programmes where Programme Type = PGR</description>
        <inlineHelpText>Denotes user is granted permissions of DPGR or Dean to view all PGR student programmes</inlineHelpText>
        <label>DPGR Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Displayname__c</fullName>
        <formula>FirstName &amp;  " " &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Displayname</label>
        <type>Text</type>
    </fields><fields>
        <fullName>DoNotContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you do not wish to be contacted then please indicate this by checking this box</description>
        <label>DoNotContact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Do_Not_Contact_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Links to FA field 'Do you give permission to be contacted about your disability?'</description>
        <inlineHelpText>If students have given permission to be contacted about their disability</inlineHelpText>
        <label>Do Not Contact Disability</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Domicile__c</fullName>
        <description>To replace use of HESA Domicile in both admin screens and application forms (using FormAssembly), as easier to use that HESA Code lookup. Apex triggers update to HESA Domicile so correct HESA Code is recorded</description>
        <globalPicklist>HESA_Domicile</globalPicklist>
        <label>Domicile</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>EEA_Student__c</fullName>
        <formula>HESA_Nationality__r.EEA_Nationality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from the applicants choice of Nationality, which then takes EEA flag on HESA table</inlineHelpText>
        <label>EEA Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EU_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>X EU Citizen</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Gaps_in_Residence__c</fullName>
        <inlineHelpText>Student has continually lived in country of birth to present day, with no gaps in residence.</inlineHelpText>
        <label>Resident in birth country with no gaps</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>HESA_Domicile_Code__c</fullName>
        <formula>HESA_Domicile__r.HESA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from HESA Code object, depending on value in HESA Domicile field</inlineHelpText>
        <label>HESA Domicile Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>HESA_Domicile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HESA Domicile</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HESA_Code__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Domicile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HESA_Code__c</referenceTo>
        <relationshipLabel>Contacts (HESA Domicile)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>HESA_Nationality_Code__c</fullName>
        <formula>HESA_Nationality__r.HESA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from HESA Code object, dependent on value in HESA Nationality field</inlineHelpText>
        <label>HESA Nationality Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>HESA_Nationality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HESA Nationality</label>
        <referenceTo>HESA_Code__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>HUSID__c</fullName>
        <inlineHelpText>HESA unique student identifier; used in HESA reporting</inlineHelpText>
        <label>HUSID</label>
        <length>13</length>
        <type>Text</type>
    </fields><fields>
        <fullName>HUSID_generated_by_LSTM__c</fullName>
        <description>Reads third to sixth characters of HUSID to determine if generated by LSTM HESA return. Id string is as follows: first 2 characters are year of entry, subsequent 4 characters are HESA Institute Id + 1000. Therefore 151228 is 2015 entry students at 1000 + 0228 (LSTM HESA Id). The next 6 digits are the final 6 digits of the LSTM No. The final digit (check digit) is generate via complex formula available on HESA website.</description>
        <formula>MID(HUSID__c,3,4)="1228"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes whether HUSID was generated by LSTM for HESA return</inlineHelpText>
        <label>HUSID generated by LSTM</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Known_As__c</fullName>
        <label>Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LSTM_Email__c</fullName>
        <description>For LSTM email address, which is LSTM No with domain suffix</description>
        <label>LSTM Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>LSTM_No__c</fullName>
        <description>As requested by KT 20th Oct</description>
        <displayFormat>{00000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Autonumber, unique Student identifier</inlineHelpText>
        <label>LSTM No</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>Male_Female__c</fullName>
        <description>Used in place of Gender field</description>
        <label>Male/Female</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Middle_Name_Other_Names__c</fullName>
        <label>Middle Name/Other Names</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Nationality__c</fullName>
        <description>To replace use of HESA Nationality in both admin screens and application forms (using FormAssembly), as easier to use that HESA Code lookup. Apex triggers update to HESA Nationality so correct HESA Code is recorded</description>
        <globalPicklist>HESA_Nationality</globalPicklist>
        <label>Nationality</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Non_EEA_student_with_current_UK_Visa__c</fullName>
        <label>Non-EEA student with current UK Visa?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>PGR_HESA_Dataload_15_16__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes that Student was imported as part of 15/16 HESA return of PGR students (origin: UoL)</inlineHelpText>
        <label>PGR HESA Dataload 15/16</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Personal_Email__c</fullName>
        <description>For persistent store of original applicant email address, to allow standard email field to be sued for LSTM email address</description>
        <label>Personal Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Photo_Attachment_ID__c</fullName>
        <label>Photo Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Previous_Country__c</fullName>
        <label>Previous Country</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Previous_Surname__c</fullName>
        <label>Previous Surname</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Registered_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Must be checked for Staff member to be linked to Supervision records or PAP Members</inlineHelpText>
        <label>Registered Supervisor</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Registration_Password__c</fullName>
        <description>This field stores a temporary string of characters for use in an Apex class</description>
        <label>Registration Password</label>
        <length>12</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Show_Photo__c</fullName>
        <formula>IF ( ISBLANK ( Photo_Attachment_ID__c ), 
    "None Provided",    
    HYPERLINK ("/servlet/servlet.FileDownload?file="&amp;Photo_Attachment_ID__c, "Click Here")
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Photo</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sort_Name__c</fullName>
        <description>Concatenation of Last Name, First Name &amp; Middle Name</description>
        <formula>LastName &amp; ", " &amp; FirstName &amp; " " &amp; Middle_Name_Other_Names__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Test_Class_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field for Test Class use, to exclude from Flows</description>
        <label>Test Class Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Test_Record__c</fullName>
        <inlineHelpText>To isolate from reports etc</inlineHelpText>
        <label>Test Record</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Type_of_Visa__c</fullName>
        <label>Type of Visa</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>User_is_Contact__c</fullName>
        <formula>IF($User.ContactId=Id,TRUE,FALSE)</formula>
        <inlineHelpText>Reference by PAP Member Flow</inlineHelpText>
        <label>User is Contact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>VLE_ID__c</fullName>
        <description>UserId for desire2learn API</description>
        <label>VLE_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields><fields>
        <fullName>VLE_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VLE_Visibility</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Visa_End_Date__c</fullName>
        <label>Visa End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Visa_Start_Date__c</fullName>
        <label>Visa Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>cn__c</fullName>
        <formula>substitute(FirstName," ", "") &amp; "." &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>cn</label>
        <type>Text</type>
    </fields><fields>
        <fullName>givenname__c</fullName>
        <formula>substitute(FirstName," ", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>givenname</label>
        <type>Text</type>
    </fields><fields>
        <fullName>sAMAccountName__c</fullName>
        <formula>value( LSTM_No__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sAMAccountName</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>sn__c</fullName>
        <formula>LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sn</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><externalSharingModel>Private</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllApplicants</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Personal_Email__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Student_Applicant</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <label>All Applicants (no test)</label>
    </listViews><listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>EU_Citizen__c</columns>
        <columns>LSTM_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EU_Citizen__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Students/Staff</label>
    </listViews><listViews>
        <fullName>AllStaff</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>VLE_Visibility__c</columns>
        <columns>VLE_ID__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Staff</value>
        </filters>
        <label>All Staff</label>
    </listViews><listViews>
        <fullName>AllStudentApplicants</fullName>
        <columns>FULL_NAME</columns>
        <columns>LSTM_No__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>HESA_Nationality__c</columns>
        <columns>Test_Record__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Student_Applicant</value>
        </filters>
        <label>All Student Applicants</label>
    </listViews><listViews>
        <fullName>AllTestApplicants</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>VLE_ID__c</columns>
        <columns>VLE_Visibility__c</columns>
        <columns>EEA_Student__c</columns>
        <columns>Test_Record__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Student_Applicant</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All Test Applicants</label>
    </listViews><listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>Test_Record__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Other,Contact.Student_Applicant</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All Contacts</label>
        <sharedTo>
            <group>SIS_Admin_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>All_Host_Organisations</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>Test_Record__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Host_Organisation</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <label>All Host Organisations</label>
        <sharedTo>
            <group>SIS_Admin_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>All_Other_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>Test_Record__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Other</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <label>All Other Contacts</label>
    </listViews><listViews>
        <fullName>All_Test_Applicants_with_VLE_Access</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>VLE_ID__c</columns>
        <columns>VLE_Visibility__c</columns>
        <columns>Test_Record__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Student_Applicant</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>VLE_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Test Applicants with VLE Access</label>
        <sharedTo>
            <group>SIS_Admin_Group</group>
            <group>VLE_Admin_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>Color_Test_Listview</fullName>
        <columns>FULL_NAME</columns>
        <columns>HESA_Nationality__c</columns>
        <columns>HESA_Domicile__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Test_Record__c</columns>
        <columns>VLE_ID__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Color Test Listview</label>
        <sharedTo>
            <group>Color_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>DTN_May_2015_Pilot_Photo_Attachment</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Photo_Attachment_ID__c</columns>
        <columns>Show_Photo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Photo_Attachment_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>equals</operation>
            <value>Rick Astley</value>
        </filters>
        <label>DTN May 2015 Pilot Photo Attachment</label>
    </listViews><listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Students/Staff</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>LSTM_No__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>HESA_Nationality__c</columns>
        <columns>EEA_Student__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>notContain</operation>
            <value>DUMMY</value>
        </filters>
        <filters>
            <field>Test_Record__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Student_Applicant</value>
        </filters>
        <label>New Student Records - This Week</label>
    </listViews><listViews>
        <fullName>Staff_Import_16th_July_15</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>VLE_Visibility__c</columns>
        <columns>VLE_ID__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Staff</value>
        </filters>
        <filters>
            <field>CRM_Temp_Field__c</field>
            <operation>startsWith</operation>
            <value>Staff Import</value>
        </filters>
        <label>Staff Import 16th July 15</label>
        <sharedTo>
            <group>VLE_Admin_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>Staff_with_VLE_Access</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>VLE_Visibility__c</columns>
        <columns>VLE_ID__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Staff</value>
        </filters>
        <label>Staff with VLE Access</label>
        <sharedTo>
            <group>VLE_Admin_Group</group>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>Alumni</fullName>
        <active>true</active>
        <description>For graduation onwards</description>
        <label>Alumni</label>
    </recordTypes><recordTypes>
        <fullName>Full_Student</fullName>
        <active>true</active>
        <description>For between registration and graduation</description>
        <label>Full Student</label>
    </recordTypes><recordTypes>
        <fullName>Host_Organisation</fullName>
        <active>true</active>
        <description>Fieldwork Host Organsation</description>
        <label>Host Organisation</label>
    </recordTypes><recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes><recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <label>Staff</label>
    </recordTypes><recordTypes>
        <fullName>Student_Applicant</fullName>
        <active>true</active>
        <description>for pre registration stage</description>
        <label>Student Applicant</label>
    </recordTypes><recordTypes>
        <fullName>Student_Pre_Reg</fullName>
        <active>true</active>
        <description>Between accepting offer and full registration</description>
        <label>Student Pre-Reg</label>
    </recordTypes><validationRules>
        <fullName>VLE_Integration_Check</fullName>
        <active>true</active>
        <description>Checks to see if contact has email before VLE Visibility field is ticked and triggers VLE Staff Member creation; email is used for VLE username</description>
        <errorConditionFormula>AND ( Email = Null,  VLE_Visibility__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>An email address must be provided for VLE integration to be triggered. Please fill in a valid email address and then retry VLE Visibility checkbox</errorMessage>
    </validationRules></CustomObject>